# learning_note

./: README.md
CPlusPlusBasicSyntax/: cplusplusCatchUp.md
CPlusPlusBasicSyntax/C++11/SmartPointer/: QA_2.cpp  share_ptr.md  shared_ptr_wrong_use_case.cpp  shared_ptr_wrong_use_case_1.cpp
CPlusPlusBasicSyntax/C++11/std_function/: std_fucntion.cpp
CPlusPlusBasicSyntax/C++17/Attribute/: nodiscard.md
CPlusPlusBasicSyntax/Function/: ParameterPassing.md  PassTest.cpp
CPlusPlusBasicSyntax/Qualifier/mutable/: mutable.cpp
CPlusPlusBasicSyntax/algorithm/: a.out  partition.cpp
CPlusPlusTemplates/: ErrorExample&&Explanation.md  TemplateMetaprogrammingErrorProne.md  UsefulTechnique.md  test.cpp
Concurrency/: ConcurrencyInAction.md  ManagingThreads.md  detach.md
Concurrency/ConcurrencyInAction/: ConcurrencyInAction.md  lock.md
Concurrency/ConcurrencyInAction/Chapter_4/: chapter_4.md
EmbeddedSystem/: BasicConcept.md
NetworkProgramming/: LinuxHighPerformanceServerProgramming.md
OOP/Basic/: TypesOfObject.md
OOP/Observer/: Observer.md
OperatingSystem/: LinuxCommand.md  Process.md
OperatingSystem/linking/: linking.md
OperatingSystem/linking/example_1/: CMakeLists.txt  main.cpp  undefined.cpp  undefined.h  use_undefined.cpp
STL/Vector/: erase_correct.cpp  erase_wrong.cpp  trap.md
STL/map/: create_map.cpp
muduo/Chapter_1/: CHapter_1.md  ObjectPool.cpp  Shared_ptr_read_write.cpp  Shared_ptr_read_write.md  Shared_ptr_read_write_2.cpp  bad_weak_ptr.cpp  destructor_delayed.cpp
muduo/Chapter_2/: copy_on_write.md  notify_one.cpp
(+28 files in other folders)
